# final-multiplex

./: .gitignore  BUGS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  ForReview.md  LICENSE-MIT  Makefile  PLAN.md  README.md  TaskBlock-Phase2.2.md  TaskBlock.md  scene-step2.toml  scene-step5.toml  scene.toml  troubleshooting.md
crates/fm-adapter-sdk/: Cargo.toml
crates/fm-adapter-sdk/src/: contract.rs  lib.rs  metrics.rs  transport.rs
crates/fm-app/: Cargo.toml
crates/fm-app/src/: bridge.rs  gpu_path.rs  main.rs  ui.rs  video.rs  wayland_sub.rs
crates/fm-core/: Cargo.toml
crates/fm-core/src/: adapter_resolver.rs  config.rs  lib.rs  metrics.rs  net_clock.rs  persist.rs  pipeline.rs  runtime.rs  supervisor.rs  transport.rs
crates/fm-dummy-adapter/: Cargo.toml
crates/fm-dummy-adapter/src/: main.rs
crates/fm-rtsp-adapter/: Cargo.toml
crates/fm-rtsp-adapter/src/: main.rs
crates/fm-youtube-adapter/: Cargo.toml
crates/fm-youtube-adapter/src/: main.rs
docs/: BUGS.md  PLAN.md  README.md  kernel-panic-nvidia-munmap-2026-06-29.md  troubleshooting-0.3.md  troubleshooting-0.4.md  troubleshooting-audio-fps-2026-06-30.md  troubleshooting.md
docs/decisions/: 0000-adr-template.md  0001-record-architecture-decisions.md  0002-gstreamer-rust-stack.md  0003-licensing.md  0004-plugin-architecture.md  0005-out-of-process-sources.md  0006-ui-toolkit.md  0007-config-format.md  0008-telemetry.md  0009-appsink-texture-bridge-implementation.md  0010-scene-config-round-trip-persistence.md  0011-shm-transport-raw-frames.md  0012-adapter-sdk-contract.md  0013-adapter-owns-source-recovery.md  0014-runtime-files-and-credentials.md  0015-gdp-framed-shm-payload.md  0016-live-source-offset-model.md  0017-adapter-declared-capabilities.md  0018-synthetic-floor-inputs.md  0019-platform-selected-transport.md  0020-core-delivery-watchdog.md  0021-versioning-scheme.md  0022-adapter-discovery.md  0023-output-framerate-policy.md  0024-gpu-presentation-path.md  0025-dmabuf-import-and-tile-res-capture.md  0026-dedicated-gpu-present-loop.md  0027-audio-clock-master.md
scenes/: scene-gate1-full.toml  scene-gate1.toml  scene-gate2.toml  scene-mixed.toml  scene-step5.toml  scene-t1.toml  scene-t3.toml  scene-youtube-test.toml  scene.toml
scripts/: release.sh
