[workspace]
members = [
    "crates/fm-adapter-sdk",
    "crates/fm-core",
    "crates/fm-app",
    "crates/fm-dummy-adapter",
    "crates/fm-rtsp-adapter",
]
resolver = "2"

[workspace.package]
version  = "0.2.0"
edition  = "2021"
license  = "MIT OR Apache-2.0"

[workspace.dependencies]
# GStreamer
gstreamer         = "0.25"
gstreamer-app     = "0.25"
gstreamer-audio   = "0.25"
gstreamer-video   = "0.25"
gstreamer-pbutils = "0.25"
gstreamer-net     = "0.25"
# UI
iced             = { version = "0.14", features = ["image", "tokio"] }
# Config / serialisation
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
toml             = "1"
toml_edit        = "0.25"
# wgpu — explicit dep so video.rs can name its types directly
wgpu             = "27"
# System calls (prctl, signal) — Unix only
libc             = "0.2"
# Internal crates
fm-adapter-sdk   = { path = "crates/fm-adapter-sdk" }
fm-core          = { path = "crates/fm-core" }
fm-dummy-adapter = { path = "crates/fm-dummy-adapter" }

