[package]
name        = "fm-adapter-sdk"
description = "Adapter contract and per-source metrics schema for Final Multiplex"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace      = true
serde_json.workspace = true
gstreamer.workspace  = true

