[package]
name        = "fm-core"
description = "GStreamer pipeline, clock, transport, and config for Final Multiplex"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fm-adapter-sdk.workspace  = true
gstreamer.workspace       = true
gstreamer-app.workspace   = true
gstreamer-audio.workspace = true
gstreamer-video.workspace = true
serde.workspace           = true
toml.workspace            = true

[lints]
workspace = true
